--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "encoding": "^0.1.13",
     "next": "latest",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "typescript": "^5.2.2"
   }
 }
