--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@vercel/postgres": "^0.5.1",
+    "antd": "^5.11.5",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
     "encoding": "^0.1.13",
     "next": "latest",
     "next-auth": "^4.24.5",
