--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "@vercel/postgres": "^0.5.1",
     "antd": "^5.11.5",
     "bcrypt": "^5.1.1",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
     "encoding": "^0.1.13",
-    "next": "latest",
+    "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
